# sudoku

./: CMakeLists.txt
include/: board.h  filepuzzlesource.h  ipuzzlesource.h  solver.h  sudokucontroller.h
qml/: Main.qml  main.qml
src/: board.cpp  filepuzzlesource.cpp  main_qml.cpp  sudokucontroller.cpp
tests/: CMakeLists.txt  test_board.cpp  test_controller.cpp
